# memesql

./: .clang-format  CMakeLists.txt  README.md  main.cpp
include/: Cell.hpp  Checker.hpp  ColumnFields.hpp  Condition.hpp  DataBase.hpp  Definitions.hpp  Exceptions.hpp  Executor.hpp  FixedResponseIterator.hpp  Parser.hpp  Query.hpp  Record.hpp  Response.hpp  ResponseIterator.hpp  Table.hpp  ThinnedTable.hpp  WrappedRecord.hpp
include/Command/: Command.hpp  CreateCommand.hpp  DeleteCommand.hpp  InsertCommand.hpp  SelectCommand.hpp  UpdateCommand.hpp
include/Expression/: BinOpExpression.hpp  BinaryOpExpr.hpp  ColumnExpr.hpp  ColumnExpression.hpp  ComparisonExpression.hpp  ConstantExpr.hpp  ConstantExpression.hpp  Expression.hpp  FunctionExpression.hpp  LogicalExpression.hpp  UnaryOpExpr.hpp
include/Parser/: Expector.hpp  Lexer.hpp  Parser.hpp  Token.hpp  TokenEnum.hpp
src/: Cell.cpp  Checker.cpp  DataBase.cpp  Definitions.cpp  Parser.cpp  Record.cpp  Response.cpp  ResponseIterator.cpp  Table.cpp  ThinnedTable.cpp
src/Parser/: Expector.cpp  Lexer.cpp  ParseCreate.cpp  ParseInsert.cpp  Parser.cpp
test/: CMakeLists.txt  CellTest.cpp  ExprTest.cpp  QueriesTest.cpp  SelectTest.cpp  TableTest.cpp
